--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
         run: yarn setup
 
       - name: Configure the platform
+        continue-on-error: true
         run: yarn clean
 
       - name: Build Android dev apk
