--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,8 +54,5 @@ jobs:
           name: app-release
           path: ./*.apk
 
-      - name: Upload residue
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-residue
-          path: ./
+      - name: File Tree
+        run: tree ./
